--- a/frontend/.nvmrc
+++ b/frontend/.nvmrc
@@ -1,1 +1,4 @@
-lts/*
+phantomjs_cdnurl=http://cnpmjs.org/downloads
+sass_binary_site=https://npm.taobao.org/mirrors/node-sass/
+registry=https://registry.npm.taobao.org
+npm install node-sass
