--- a/frontend/tsconfig.webpack.json
+++ b/frontend/tsconfig.webpack.json
@@ -1,39 +1,40 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "module": "es2015",
+    "module": "commonjs",
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "allowSyntheticDefaultImports": true,
+    "suppressImplicitAnyIndexErrors": true,
     "sourceMap": true,
-    "noEmitHelpers": true,
-    "importHelpers": true,
-    "strictNullChecks": false,
     "lib": [
       "es2015",
       "dom"
     ],
     "baseUrl": "./src",
     "paths": {
-      "@angular/*": ["node_modules/@angular/*"]
+      "@angular/*": [
+        "node_modules/@angular/*"
+      ]
     },
     "typeRoots": [
       "node_modules/@types"
     ],
     "types": [
       "hammerjs",
-      "node"
+      "jasmine",
+      "node",
+      "uglify-js",
+      "webpack"
     ]
   },
   "exclude": [
     "node_modules",
-    "dist",
-    "src/**/*.spec.ts",
-    "src/**/*.e2e.ts"
+    "dist"
   ],
-  "angularCompilerOptions": {
-    "skipMetadataEmit": true
+  "awesomeTypescriptLoaderOptions": {
+    "forkChecker": true,
+    "useWebpackText": true
   },
   "compileOnSave": false,
   "buildOnSave": false,
