--- a/frontend/package.json
+++ b/frontend/package.json
@@ -95,6 +95,8 @@
         "@angular/platform-browser-dynamic": "^5.2.10",
         "@angular/platform-server": "^5.2.10",
         "@angular/router": "^5.2.10",
+        "@ng-bootstrap/ng-bootstrap": "^2.0.0",
+        "bootstrap": "^4.1.1",
         "core-js": "^2.5.5",
         "http-server": "^0.11.1",
         "ie-shim": "^0.1.0",
