--- a/frontend/package.json
+++ b/frontend/package.json
@@ -64,7 +64,7 @@
         "server": "npm run server:dev",
         "start:prod:hmr": "cross-env ANGULAR_CONF_FILE=./config.prod.json npm run server:dev:hmr",
         "start:hmr": "npm run server:dev:hmr",
-        "start": "npm run server:dev",
+        "start": "npm run server:dev --proxy-config proxy.conf.json",
         "start:aot": "npm run server:aot:dev",
         "test": "npm run lint && karma start",
         "test:sonar": "npm run lint && cross-env SONAR_QUBE=1 karma start",
