--- a/frontend/package.json
+++ b/frontend/package.json
@@ -64,7 +64,7 @@
         "server": "npm run server:dev",
         "start:prod:hmr": "cross-env ANGULAR_CONF_FILE=./config.prod.json npm run server:dev:hmr",
         "start:hmr": "npm run server:dev:hmr",
-        "start": "npm run server:dev --proxy-config proxy.conf.json",
+        "start": "npm run server:dev",
         "start:aot": "npm run server:aot:dev",
         "test": "npm run lint && karma start",
         "test:sonar": "npm run lint && cross-env SONAR_QUBE=1 karma start",
@@ -100,6 +100,7 @@
         "core-js": "^2.5.5",
         "http-server": "^0.11.1",
         "ie-shim": "^0.1.0",
+        "ngx-toastr": "^8.10.0",
         "node-sass": "^4.9.0",
         "reflect-metadata": "^0.1.12",
         "rxjs": "^5.5.10",
