--- a/frontend/package.json
+++ b/frontend/package.json
@@ -95,6 +95,10 @@
         "@angular/platform-browser-dynamic": "^5.2.10",
         "@angular/platform-server": "^5.2.10",
         "@angular/router": "^5.2.10",
+        "@fortawesome/angular-fontawesome": "^0.1.1",
+        "@fortawesome/fontawesome-svg-core": "^1.2.4",
+        "@fortawesome/free-regular-svg-icons": "^5.3.1",
+        "@fortawesome/free-solid-svg-icons": "^5.3.1",
         "@ng-bootstrap/ng-bootstrap": "^2.0.0",
         "bootstrap": "^4.1.1",
         "core-js": "^2.5.5",
