--- a/frontend/package.json
+++ b/frontend/package.json
@@ -91,6 +91,7 @@
         "@angular/compiler": "^5.2.10",
         "@angular/core": "^5.2.10",
         "@angular/forms": "^5.2.10",
+        "@angular/http": "^6.1.7",
         "@angular/platform-browser": "^5.2.10",
         "@angular/platform-browser-dynamic": "^5.2.10",
         "@angular/platform-server": "^5.2.10",
@@ -104,6 +105,7 @@
         "core-js": "^2.5.5",
         "http-server": "^0.11.1",
         "ie-shim": "^0.1.0",
+        "ngx-bootstrap": "2.0.5",
         "ngx-cookie-service": "^1.0.10",
         "ngx-toastr": "^8.10.0",
         "node-sass": "^4.9.0",
