--- a/frontend/package.json
+++ b/frontend/package.json
@@ -105,6 +105,7 @@
         "core-js": "^2.5.7",
         "http-server": "^0.11.1",
         "ie-shim": "^0.1.0",
+        "mini-css-extract-plugin": "^0.4.2",
         "ngx-bootstrap": "^3.0.1",
         "ngx-toastr": "^8.10.0",
         "node-sass": "^4.9.0",
