--- a/backend/web.config
+++ b/backend/web.config
@@ -6,7 +6,7 @@
     <handlers>
       <remove name="aspNetCore" />
       <add name="aspNetCore" path="*" verb="*" modules="AspNetCoreModule" resourceType="Unspecified" />
-      <add name="MiniProfiler" path="mini-profiler-resources/*" verb="*" type="System.Web.Routing.UrlRoutingModule" resourceType="Unspecified" preCondition="integratedMode" />
+      <add name="MiniProfiler" path="mini-profiler-resources/*" verb="*" resourceType="Unspecified" preCondition="integratedMode" />
     </handlers>
     <aspNetCore processPath="dotnet" arguments=".\PartyManage.dll" stdoutLogEnabled="false" stdoutLogFile=".\logs\stdout" />
   </system.webServer>
