--- a/frontend/package.json
+++ b/frontend/package.json
@@ -101,17 +101,21 @@
         "@fortawesome/free-regular-svg-icons": "^5.3.1",
         "@fortawesome/free-solid-svg-icons": "^5.3.1",
         "@ng-bootstrap/ng-bootstrap": "^3.2.0",
+        "@ngx-progressbar/core": "^5.1.2",
+        "@ngx-progressbar/http": "^5.1.2",
         "bootstrap": "^4.1.1",
         "core-js": "^2.5.7",
         "http-server": "^0.11.1",
         "ie-shim": "^0.1.0",
         "mini-css-extract-plugin": "^0.4.2",
         "ngx-bootstrap": "^3.0.1",
+        "ngx-pagination": "^3.2.0",
+        "ngx-progressbar": "^2.1.1",
         "ngx-toastr": "^8.10.0",
         "node-sass": "^4.9.0",
         "reflect-metadata": "^0.1.12",
-        "rxjs": "6",
-        "rxjs-compat": "6",
+        "rxjs": "^6.0",
+        "rxjs-compat": "^6.0",
         "webpack-cli": "^3.1.0",
         "zone.js": "^0.8.26"
     },
